worked on player character sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -8,6 +8,29 @@
   "earthland.AbilityWil": "Willpower",
   "earthland.AbilityCha": "Charisma",
 
+  "earthland.RoleArcanist":    "Arcanist",
+  "earthland.RoleArtillery":   "Artillery",
+  "earthland.RoleAssassin":    "Assassin",
+  "earthland.RoleAthlete":     "Athlete",
+  "earthland.RoleBrawler":     "Brawler",
+  "earthland.RoleBrute":       "Brute",
+  "earthland.RoleBurglar":     "Burglar",
+  "earthland.RoleController":  "Controller",
+  "earthland.RoleCourtesean":  "Courtesean",
+  "earthland.RoleDefender":    "Defender",
+  "earthland.RoleDetective":   "Detective",
+  "earthland.RoleEntertainer": "Entertainer",
+  "earthland.RoleExplorer":    "Explorer",
+  "earthland.RoleFencer":      "Fencer",
+  "earthland.RoleHealer":      "Healer",
+  "earthland.RoleLeader":      "Leader",
+  "earthland.RoleLurker":      "Lurker",
+  "earthland.RoleMarksman":    "Marksman",
+  "earthland.RoleScholar":     "Scholar",
+  "earthland.RoleSkirmisher":  "Skirmisher",
+  "earthland.RoleSoldier":     "Soldier",
+  "earthland.RoleTinkerer":    "Tinkerer",
+
   "earthland.AbilityStrAbbr": "str",
   "earthland.AbilityConAbbr": "con",
   "earthland.AbilityPreAbbr": "pre",
