--- a/TODO.txt
+++ b/TODO.txt
@@ -35,9 +35,10 @@ Still To Do
  * Finish the character's character-sheet
    + Add Milestones tab and complete it
    + Finish the Magic tab
-   + Finish the Features tab
+   + Finish the Features tab *CHECK*
    + Finish the Equipment tab
    + Finish the Relationships tab (does this include drag & drop?)
+ * Make it so if an ability or spell has a cost, it doesn't "spend" it, but instead adds it to the pool
  * Finish the NPC's character sheet
  * Finish the Monster's character sheet
  * Make it so an item sheet adds its dice to the actor sheet in a rollable area
