added flexible NPC templates

--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,11 @@
   "earthland.AbilityPer": "Perception",
   "earthland.AbilityWil": "Willpower",
   "earthland.AbilityCha": "Charisma",
+  "earthland.AbilityBrn": "Brawn",
+  "earthland.AbilityGrt": "Grit",
+  "earthland.AbilityKnw": "Knowledge",
+  "earthland.AbilityAwr": "Awareness",
+  "earthland.AbilityPrs": "Presence",
 
   "earthland.RoleArcanist":    "Arcanist",
   "earthland.RoleArtillery":   "Artillery",
@@ -17,6 +22,7 @@
   "earthland.RoleBurglar":     "Burglar",
   "earthland.RoleController":  "Controller",
   "earthland.RoleCourtesean":  "Courtesean",
+  "earthland.RoleCraftsperson":"Craftsperson",
   "earthland.RoleDefender":    "Defender",
   "earthland.RoleDetective":   "Detective",
   "earthland.RoleEntertainer": "Entertainer",
