mostly UI fixes, but also changed classes to combat roles, going to add classes separately

--- a/lang/en.json
+++ b/lang/en.json
@@ -37,6 +37,15 @@
   "earthland.RoleSoldier":     "Soldier",
   "earthland.RoleTinkerer":    "Tinkerer",
 
+ "earthland.PackageAssassin": "Assassin",
+ "earthland.PackageBrawler":  "Brawler",
+ "earthland.PackageDefender": "Defender",
+ "earthland.PackageFencer":   "Fencer",
+ "earthland.PackageHealer":   "Healer",
+ "earthland.PackageMA":       "Martial Artist",
+ "earthland.PackageSharp":    "Sharpshooter",
+ "earthland.PackageSB":       "Spellbinder",
+
   "earthland.ClassArtificer":    "Artificer",
   "earthland.ClassBarbarian":    "Barbarian",
   "earthland.ClassFighter":      "Fighter",
