--- a/lang/en.json
+++ b/lang/en.json
@@ -70,5 +70,19 @@
   "earthland.EffectEdit": "Edit Effect",
   "earthland.EffectDelete": "Delete Effect",
 
+  "AddCustomDice": "Add Custom Dice",
+  "Added": "added",
+  "AddToPool": "Add To Pool",
+  "EffectDice": "Effect Dice",
+  "NoTraitsInPool": "There are currently no traits or dice in this pool.",
+  "Reroll": "Re-Roll",
+  "Roll": "Roll",
+  "RollAndSelect": "Roll & Select",
+  "RollForEffect": "Roll For Effect",
+  "RollForTotal": "Roll For Total",
+  "RollResultSourceCollapsed": "Roll Result Source Collapsed",
+  "RollResultSourceCollapsedHint": "Roll result die sources initially collapsed in chat.",
+  "ToPool": "To Pool",
+
   "earthland.Add": "Add"
 }
