--- a/lang/en.json
+++ b/lang/en.json
@@ -9,6 +9,7 @@
   "earthland.AbilityCha": "Charisma",
   "earthland.AbilityBrn": "Brawn",
   "earthland.AbilityGrt": "Grit",
+  "earthland.AbilityVit": "Vitality",
   "earthland.AbilityKnw": "Knowledge",
   "earthland.AbilityAwr": "Awareness",
   "earthland.AbilityPrs": "Presence",
@@ -64,6 +65,22 @@
   "earthland.AbilityWilAbbr": "wil",
   "earthland.AbilityPerAbbr": "per",
   "earthland.AbilityChaAbbr": "cha",
+
+  "earthland.VirtueComp": "Compassion",
+  "earthland.VirtueCour": "Courage",
+  "earthland.VirtueHon":  "Honesty",
+  "earthland.VirtueHum":  "Humility",
+  "earthland.VirtueJust": "Justice",
+  "earthland.VirtuePrud": "Prudence",
+  "earthland.VirtueTemp": "Temperance",
+
+  "earthland.ViceEnvy":  "Envy",
+  "earthland.ViceGlut":  "Gluttony",
+  "earthland.ViceGreed": "Greed",
+  "earthland.ViceLust":  "Lust",
+  "earthland.VicePride": "Pride",
+  "earthland.ViceSloth": "Sloth",
+  "earthland.ViceWrath": "Wrath",
 
   "earthland.EffectCreate": "Create Effect",
   "earthland.EffectToggle": "Toggle Effect",
