added monster sheet stuff

--- a/lang/en.json
+++ b/lang/en.json
@@ -38,14 +38,14 @@
   "earthland.RoleSoldier":     "Soldier",
   "earthland.RoleTinkerer":    "Tinkerer",
 
- "earthland.PackageAssassin": "Assassin",
- "earthland.PackageBrawler":  "Brawler",
- "earthland.PackageDefender": "Defender",
- "earthland.PackageFencer":   "Fencer",
- "earthland.PackageHealer":   "Healer",
- "earthland.PackageMA":       "Martial Artist",
- "earthland.PackageSharp":    "Sharpshooter",
- "earthland.PackageSB":       "Spellbinder",
+  "earthland.PackageAssassin": "Assassin",
+  "earthland.PackageBrawler":  "Brawler",
+  "earthland.PackageDefender": "Defender",
+  "earthland.PackageFencer":   "Fencer",
+  "earthland.PackageHealer":   "Healer",
+  "earthland.PackageMA":       "Martial Artist",
+  "earthland.PackageSharp":    "Sharpshooter",
+  "earthland.PackageSB":       "Spellbinder",
 
   "earthland.ClassArtificer":    "Artificer",
   "earthland.ClassBarbarian":    "Barbarian",
@@ -81,6 +81,16 @@
   "earthland.VicePride": "Pride",
   "earthland.ViceSloth": "Sloth",
   "earthland.ViceWrath": "Wrath",
+
+  "earthland.BehaviorAggr": "Aggression",
+  "earthland.BehaviorAlrt": "Alertness",
+  "earthland.BehaviorCoor": "Coordination",
+  "earthland.BehaviorCnng": "Cunning",
+  "earthland.BehaviorFero": "Ferocity",
+  "earthland.BehaviorPred": "Predation",
+  "earthland.BehaviorProt": "Protectivity",
+  "earthland.BehaviorSkit": "Skittishness",
+  "earthland.BehaviorTerr": "Territoriality",
 
   "earthland.EffectCreate": "Create Effect",
   "earthland.EffectToggle": "Toggle Effect",
