--- a/TODO.txt
+++ b/TODO.txt
@@ -40,36 +40,33 @@ Still To Do
    + Finish the Features tab *CHECK*
    + Finish the Equipment tab *CHECK*
    + Finish the Relationships tab (does this include drag & drop? No) *CHECK*
-
---------------------------------------------------------------------------------
-Still ToDo
- * Complications should be makable as "Permanent", so that non-permanent ones (like "tied up") can be quickly removed at the end of a scene
- * Add Classes back as Item types, move Subclasses to the top with Classes
- * Add Virtues and Vices at least to the NPC sheet, though maybe also to the PC sheet under "Relationships"? Or change that tab to "Social"?
- * Add Motives and Goals to the PC and NPC sheets
- * Make Milestones checkable on the main list sheet
- * Make it so that Milestones can add XP to the character's XP pool, but when they do so they become "locked"
- * Make it so that only reusable Milestones can be unlocked
- * Make it so that we can roll initiative (port my fix from the other cortex system)
-
-
- * Make it so Abilities and Spells can require Energy and/or Magic Points (from 0 to 5 of each maybe?)
-
+ * Add Virtues and Vices at least to the NPC sheet, though maybe also to the PC sheet under "Relationships"? Or change that tab to "Social"? *CHECK*
+ * Add Motives and Goals to the PC and NPC sheets *CHECK*
+ * Complications should be makable as "Permanent", so that non-permanent ones (like "tied up") can be quickly removed at the end of a scene *CHECK*
+ * Add Classes back as Item types, move Subclasses to the top with Classes *CHECK*
+ * Finish the NPC's character sheet *CHECK*
+    + refactor it a bit to use parts of the player character sheet *CHECK*
  * Finish the Monster's character sheet
-
- * Finish the NPC's character sheet
-    + refactor it a bit to use parts of the player character sheet *check*
-
- * Add the important sub-types of NPCs and Monsters:
+ * Add the important sub-types of Monsters:
+   + Minions & Elites
    + Add Bosses which have more hit points or "life dice"
    + Add Mobs which are similar as they have more Life Dice, but weaken as they lose hit points or life dice, instead of strengthening
 
+ --------------------------------------------------------------------------------
+Still ToDo
+
+
+ * Make it so that we can roll initiative (port my fix from the other cortex system)
+
+ * Make Milestones checkable on the main list sheet
+ * Make it so that Milestones can add XP to the character's XP pool, but when they do so they become "locked"
+ * Make it so that only reusable Milestones can be unlocked
+
  * Make it so that armor dice degrade and can be repaired
+
+ * Make it so Abilities and Spells can require Energy and/or Magic Points (from 0 to 5 of each maybe?)
  * Make it so if an ability or spell has a cost, it doesn't "spend" it, but instead adds it to the pool
-
  * Make it so that the dice pool can contain Energy and Magic Points
-
- * Create a macro/tool to roll difficulty for the GM automatically (or add them to a pool, at least)
 
 
 <-- Playable by here -->
@@ -80,7 +77,13 @@ Heroic Die mod  needs this:
 --------------------------------------------------------------------------------
 Nice to have
 
- * WORKFLOWS:
+GM TOOLS:
+ * Create a macro/tool to roll difficulty for the GM automatically (or add them to a pool, at least)
+ * Tool to roll difficulty quickly
+ * Tool to give PP (Magic Point) to a player character
+
+
+WORKFLOWS:
  * Make it so that if a character is targeting another character, they can click a button on the pool which will add any complications, injuries or other stuff to their dice pool
  * Make it so a character can add an existing roll to their hotbar
  * Make it so GM can easily roll difficulties
