--- a/TODO.txt
+++ b/TODO.txt
@@ -52,34 +52,46 @@ Still To Do
    + Add Bosses which have more hit points or "life dice"
    + Add Mobs which are similar as they have more Life Dice, but weaken as they lose hit points or life dice, instead of strengthening
  * Make it so that we can roll initiative (port my fix from the other cortex system)
+ * Add an AC die to all characters as a main resource (top of sheet) this can be multiple dice
+ * Make it so Abilities and Spells can require Energy and/or Magic Points (from 0 to 5 of each maybe?)
+ * Make it so that Monsters have elemental Reistances, Immunities and Weaknesses
 
  --------------------------------------------------------------------------------
 Still ToDo
 
- * Add an AC die to all characters as a main resource (top of sheet) this can be multiple dice
+ * Change the Item templates to use the Dice Selector instead of a text field
 
- * Make it so Abilities and Spells can require Energy and/or Magic Points (from 0 to 5 of each maybe?)
- * Make it so if an ability or spell has a cost, it doesn't "spend" it, but instead adds it to the pool
+ * Add a "Use" button to the line of every Spell and Ability
+ * Add a "Use" button conditionally to any Item that has either an Energy or MP cost
+
+ * Make it so if an ability or spell has a cost, and the user clicks the "use" button, that resource doesn't get "spent" it, but instead the system adds it to the pool
+ * Make it so that if an ability or spell has a cost that you can't pay, it returns an error message and does not add it to the pool
  * Make it so that the dice pool can contain Energy and Magic Points
+ * Make it so that if the user clicks "Confirm" on a dice pool that has Magic or Energy in it, those are deducted from the character's sheet
+ * Make it so that if the pool has Energy or MP in it, but the character has insufficient MP or Energy, an error is displayed and the pool is not confirmed
+ * Make it so that there is a way to remove abilities that require MP or Energy from the pool
 
  * Make Milestones checkable on the main list sheet
  * Make it so that Milestones can add XP to the character's XP pool, but when they do so they become "locked"
- * Make it so that only reusable Milestones can be unlocked
+ * Make it so that only reusable Milestones can be unlocked by a player
+
+ * Make it so you can name your dice pool
+ * Make it so you can drag the Dice Pool into your hotbar
+ * Make it so that if a player confirms a dice pool that has a Hindrance die in it, that player's character gains 1 MP automatically
 
 
 <-- Playable by here -->
 Heroic Die mod  needs this:
  * Make it so there are "Resource Dice", which are consumed when rolled, but can be reset
 
- * Make it so that armor dice degrade and can be repaired
 
 --------------------------------------------------------------------------------
 Nice to have
 
 GM TOOLS:
  * Create a macro/tool to roll difficulty for the GM automatically (or add them to a pool, at least)
- * Tool to roll difficulty quickly
  * Tool to give PP (Magic Point) to a player character
+ * Tool to give or take Energy from a character
 
 
 WORKFLOWS:
@@ -100,6 +112,7 @@ WORKFLOWS:
  * Make it so you can drag and drop characters onto each other, which forms a relationship object
  * Make it so that Bosses alert the GM when they reach different levels of health (so that new abilities can trigger)
 
+ * Make it so that armor dice degrade and can be repaired
 
 
  * Make it so that "Combat Reflexes" adds +1 to a character's initiative for each level they have
