--- a/lang/en.json
+++ b/lang/en.json
@@ -100,7 +100,9 @@
   "AddCustomDice": "Add Custom Dice",
   "Added": "added",
   "AddToPool": "Add To Pool",
+  "DicePoolName": "Dice Pool Name",
   "EffectDice": "Effect Dice",
+  "Name": "Name",
   "NoTraitsInPool": "There are currently no traits or dice in this pool.",
   "Reroll": "Re-Roll",
   "Roll": "Roll",
