--- a/lang/en.json
+++ b/lang/en.json
@@ -103,6 +103,9 @@
   "DicePoolName": "Dice Pool Name",
   "EffectDice": "Effect Dice",
   "MakeDraggable":"Make DicePool Item",
+  "SavePool":     "Save Changed Pool",
+  "CreatePool":   "Make DicePool Item",
+  "MakeDraggable":"Make DicePool Item",
   "Name": "Name",
   "NoTraitsInPool": "There are currently no traits or dice in this pool.",
   "Reroll": "Re-Roll",
