--- a/TODO.txt
+++ b/TODO.txt
@@ -82,17 +82,59 @@ Still To Do
  * For now, let's just add a "roll all" button
  * Give lots of things damage dice and healing dice
  * Make it so that there's a way to roll just Damage Dice or Healing Dice together without the "selection" process and without worrying about hitches and adding the total together.
+ * Make it so that things with charges have their charge deducted as part of the rolling process
+   + Items have charges, so Potion, Lacrima, Equipment and Trinket
+ * Create a tool to reset a user's Dice Pool in case it breaks
+ * Change the icon for charges in the dice pool
 
  --------------------------------------------------------------------------------
 Still ToDo
 
-
- * Make it so that things with charges have their charge deducted as part of the rolling process
-   + Items have charges, so Potion, Lacrima, Equipment and Trinket
+ * Download the following data from the EarthLand game:
+   + Celestial Spirits - pull from local *CHECK*
+   + Monsters (Earth Land) - add to compendium from local monsters *CHECK*
+   + Monsters (SRD) *CHECK*
+   + Backgrounds *CHECK*
+   + Class Features (Earth Land) *CHECK*
+   + Class Features (SRD) *CHECK*
+   + Classes (Earth Land) *CHECK*
+   + Feats (Earth Land) *CHECK*
+   + Herbs *CHECK*
+   + Items (SRD) *CHECK*
+   + Minerals (Should I add the image ones back in?) *CHECK*
+   + Monster Features *CHECK*
+   + Races (Earth Land) *CHECK*
+   + Racial Feautures (Earth Land) *CHECK*
+   + Spells (Earth Land) *CHECK*
+   + Spells (SRD) *CHECK*
+   + Subclass Features (Earth Land) *CHECK*
+   + Subclasses (SRD) *CHECK*
+   + Textiles (Earth Land) *CHECK*
+   + Wood Cuttings (Create compendium from items, save images) *CHECK*
+   + Archived Notes (Earth Land) *CHECK*
+   + Tables (SRD) *CHECK*
+   + Archived Scenes *CHECK*
+   + Cooking Ingredients *CHECK*
+   + Monster Parts *CHECK*
+   + Other (Trade Goods) *CHECK*
+   + Lacrima *CHECK*
+   + Gemstones *CHECK*
+   + Celestial Keys *CHECK*
+   + Firearms
+   + Firearm Ammo
+   + Monster Traits
+   + Monster Abilities
+   + Class Traits
+   + Magical Armor
+   + Magical Items
+   + Magical Weapons
+   + Magical Ammo
+   + Etherious Forms
+   + Artificer Creations
+   + NPCs (kind of like Monsters)
 
 
 GM TOOLS:
- * Create a tool to reset a user's Dice Pool in case it breaks
  * Create a macro/tool to roll difficulty for the GM automatically (or add them to a pool, at least)
  * Tool to give PP (Magic Point) to a player character
  * Tool to give or take Energy from a character
