--- a/lang/en.json
+++ b/lang/en.json
@@ -97,6 +97,14 @@
   "earthland.EffectEdit": "Edit Effect",
   "earthland.EffectDelete": "Delete Effect",
 
+  "trivial":           "Trivial",
+  "very_easy":         "Very Easy",
+  "easy":              "Easy",
+  "challenging":       "Challenging",
+  "hard":              "Hard",
+  "very_hard":         "Very Hard",
+  "almost_impossible": "Almost Impossible",
+
   "AddCustomDice": "Add Custom Dice",
   "Added": "added",
   "AddToPool": "Add To Pool",
